Fixed issue where more info text would be too big on mobile devices.

--- a/taskItStyles.css
+++ b/taskItStyles.css
@@ -86,4 +86,8 @@ body {
         font-size: 20px;
     }
     
+    #moreInfo {
+        font-size: 10px;
+    }
+    
 }
